# vscode-vector-practice

./: .gitignore  CMakeLists.txt
app/: vectorList01
include/: database.hpp  listmenu.hpp
src/: database.cpp  listmenu.cpp  main.cpp
